fix: better align buttons

--- a/frontend/src/assets/sass/complaint.scss
+++ b/frontend/src/assets/sass/complaint.scss
@@ -548,6 +548,7 @@
   h3 {
     margin-bottom: 1rem;
     font-size: 1.25rem;
+    margin-top: 0.25rem;
   }
 
   h4 {
